syntax = "proto3";

package proto;
option go_package = "serverbp";

message Request{
  int64 payload =1 ;
}
message Response {
  int32 vehicleID = 1;
  string vehicleName = 2;
  string plateNumber = 3;
  string dateTime = 4;
  string color = 5;
  string productDate = 6;
}

service ListCustomers {
  rpc makeList(Request) returns (Response);
}
